<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/gradient"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detailtext"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal"
        android:textColor="#ffff"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/SettingsText"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:id="@+id/Number1"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/detailtext"
        app:layout_constraintLeft_toLeftOf="@+id/detailtext"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#fff"
        android:hint="@string/Number1"
        android:layout_marginBottom="5dp"
        android:inputType="phone"
        android:background="@drawable/rounded_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/Number2"
        android:layout_marginTop="5dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/Number1"
        app:layout_constraintLeft_toLeftOf="@+id/detailtext"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#fff"
        android:hint="@string/Number2"
        android:layout_marginBottom="5dp"
        android:inputType="phone"
        android:background="@drawable/rounded_edit_text"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/Number2"
        app:layout_constraintLeft_toLeftOf="@+id/detailtext"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#fff"
        android:hint="@string/Email"
        android:layout_marginBottom="5dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edit_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/messa"
        android:layout_marginTop="5dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="@+id/detailtext"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#fff"
        android:hint="@string/Message"
        android:layout_marginBottom="5dp"
        android:inputType="textLongMessage|textMultiLine"
        android:background="@drawable/rounded_edit_text"
        android:text="@string/DefaultText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/messa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:id="@+id/Save"
            android:textColor="#fff"
            android:background="@drawable/roundedbutton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>